tests/snapshots/spanshot_request@14268685401099961349.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_expr: ResetBindingMode, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `[ref x]: &[T]`

[ref x] @ p: &[T]
// Applying rule `ConstructorRef`
ref x @ &(*p).0: &T
// Applying rule `Binding`
x @ &(*p).0: &T

// Final bindings:
let x: &T = &(*p).0
